# SCUCACompQQbot

./: .env.dev  .env.prod  README.md  pyproject.toml
plugins/scur/: __init__.py  data_source.py  helpPart.py  partyPart.py  pkPart.py  scorePart.py  scucaPart.py  scurPart.py  scurankPart.py  summaryPart.py  travelPart.py  utils.py  wcaPart.py  weekrank_and_comprank_Part.py  zcjPart.py
plugins/scur/scheduler/: __init__.py
plugins/sra/: __init__.py  data_source.py  utils.py
plugins/wca/: __init__.py  cubingSearch.py  fetchDetail.py  types.py  wcaPart.py
scucabot/plugins/scur/: __init__.py  data_source.py  helpPart.py  partyPart.py  pkPart.py  scorePart.py  scramblePart.py  scucaPart.py  scurPart.py  scurankPart.py  summaryPart.py  utils.py  weekrank_and_comprank_Part.py  zcjPart.py
