[project]
name = "SCUCACompQQbot"
version = "0.1.0"
description = "SCUCACompQQbot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler","nonebot_plugin_learning_chat"]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo"]
